--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="pt-br" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>َAnimated Login Form</title>
+    <title>َLogin animado</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
 
 <form class="box" action="index.html" method="post">
   <h1>Login</h1>
-  <input type="text" name="" placeholder="Username">
-  <input type="password" name="" placeholder="Password">
-  <input type="submit" name="" value="Login">
+  <input type="text" name="" placeholder="E-mail">
+  <input type="password" name="" placeholder="Senha">
+  <input type="submit" name="" value="Entrar">
 </form>
 
 
