--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <form class="box" action="index.html" method="post">
   <h1>Login</h1>
-  <input type="text" name="" placeholder="E-mail">
+  <input type="text" name="" placeholder="Email">
   <input type="password" name="" placeholder="Senha">
   <input type="submit" name="" value="Entrar">
 </form>
